--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -1,23 +1,60 @@
+<head>
+<!--[if lte IE 8]>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-old-ie-min.css">
+<![endif]-->
+<!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
+<!--<![endif]-->
+
+
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+</head>
+
+
 <style type="text/css">
-
-
- .homepageTitlePg {
-      color: white;
-      padding-top: 8em;
-      margin: 0 auto;
-      width: 90%;
-      font-size: 1.5em;
-      font-family: 'Proximanova';
-      font-weight: bold;
-      line-height: 1.42857143;
-      height: 50%;
-
-    }
-
 
   .form-container {
     position: absolute;
     margin: 0 auto;
+  }
+
+  .block {
+    display: block;
+  }
+
+  .text-center {
+    text-align: center;
+  }
+
+  #districts {
+    width: 100%;
+  }
+
+  .mainTitle {
+    width: 65%;
+    margin-right: 0px;
+  }
+
+  #myTitleText {
+    width: 70%;
+    display: inline-block;
+  }
+
+  #educatorTrustTitle {
+    text-align: left;
+    color: black !important;
+    margin-left: 5%;
+    margin-top: 5%;
+    font-size: 2.3em;
+  }
+
+  #ipadImgContainer {
+    display: inline-block;
+    width: 25%;
+  }
+
+  #ipadImg {
+    width: 95%;
   }
 
   .section-buffer {
@@ -151,7 +188,7 @@
   }
 
   .content--max--width:before {
-      display: table;
+    display: table;
     line-height: 0;
     content: "";
   }
@@ -193,9 +230,69 @@
       display: none;
     }
 
+    .splash-new .splash-container {
+      background: url('/images/student-hero-blue.jpg')
+          center
+          top/cover
+          no-repeat
+          #726241 !important;
+    }
 
     #get-started h1 {
-      font-size: 1.8em;
+    }
+
+    .splash-new .splash-container .title {
+      text-align: center;
+      width: 90% !important;
+    }
+
+    #myTitleText {
+      width: 90%;
+      display: block;
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    #ipadImgContainer {
+      display: block;
+      width: 60%;
+      margin: 0 auto;
+      position: relative;
+      top: 50px;
+    }
+
+    #ipadImg {
+      width: 95%;
+    }
+
+    #hero-button {
+      margin: 0 auto;
+      font-size: 1em;
+      width: 120px !important;
+      height: 40px !important;
+    }
+
+    #educatorTrustTitle {
+      font-size: 1em;
+      margin-top: 25%;
+    }
+
+    .footer {
+      font-size: .2em !important;
+      text-align: center;
+      padding-bottom: 0px !important;
+      line-height: .3;
+    }
+    .footer--nav--link:not(:last-child) {
+      margin-right: 10px;
+    }
+
+    .splash-new .splash-container .title #myTitleText h4 {
+      font-size: .5em;
+    }
+
+    .splash-new .splash-container .title #myTitleText h1 {
+      font-size: 1.5em;
     }
 
 
@@ -276,12 +373,68 @@
 
   }
 
+
+  @media (min-width: 600px) and (max-width: 1025px){
+
+    .splash-new .splash-container .title {
+      text-align: center;
+      width: 90% !important;
+    }
+
+    #myTitleText {
+      width: 70%;
+      display: block;
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    #ipadImgContainer {
+      display: block;
+      width: 60%;
+      margin: 0 auto;
+      position: relative;
+      top: 70px;
+      left: 30px;
+    }
+
+    #ipadImg {
+      width: 70%;
+    }
+
+    #hero-button {
+      margin: 0 auto;
+      font-size: .8em;
+    }
+
+    .splash-new .splash-container .title #myTitleText h1 {
+      text-align: center;
+    }
+
+    .splash-new .splash-container .title #myTitleText h4 {
+      text-align: center;
+    }
+
+    #educatorTrustTitle {
+      margin-top: 15%;
+    }
+
+    .footer {
+      font-size: .7em !important;
+      text-align: center;
+    }
+
+  }
+
   @media (min-width: 35.5em) {
     .splash-new .splash-container h4 {
       text-align: left;
     }
     .splash-new .splash-container h1 {
       text-align: left;
+    }
+    .splash-new .splash-container .title {
+      text-align: left;
+      width: 90% !important;
     }
   }
 
@@ -305,9 +458,8 @@
           no-repeat
           #726241;"
   >
-    <div class="homepageTitlePg">
-    <div class="pure-g">
-      <div id="pitch" class="pure-u-2-3">
+    <div class="title">
+      <div id="myTitleText">
         <h1>
           The easiest way to assess fluency and comprehension
         </h1>
@@ -318,56 +470,49 @@
         <a href="/student_dashboard/#/story/demo" id="hero-button">> Try a Demo</a>
       </div>
 
-      <div class="pure-u-1-3">
-
-        <img src="/images/ipad-product.png" alt="">
-      </div>
-
-
-
-
-      </div>
-      </div>
+      <div id="ipadImgContainer">
+        <img id="ipadImg" src="/images/ipad-product.png" alt="">
       </div>
     </div>
-  </div>
 </div>
+</div>
+
 
 
 
 <div class='section-buffer'></div>
 
+<h1 id="educatorTrustTitle"> Trusted by thousands of educators </h1>
 
-<section style="margin-top: 2em; margin-bottom: 2em; margin-left: 6em; margin-right:6em;">
-  <div class="pure-g" style="padding-top: 3em;">
 
-    <div class="pure-u-1-5">
+<section style="margin-bottom: 2em; width:80%;">
+  <div class="pure-g block text-center" style="padding-top: 1em;">
+
+    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="/images/district-1.png" alt="">
+        <img src="/images/district-1.png" alt="" id="districts">
       </div>
     </div>
 
-    <div class="pure-u-1-5">
+    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
+        <img src="/images/district-2.png" alt="" id="districts">
+    </div>
+
+    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="/images/district-2.png" alt="">
+        <img src="/images/district-3.png" alt="" id="districts">
       </div>
     </div>
 
-    <div class="pure-u-1-5">
+    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="/images/district-3.png" alt="">
+        <img src="/images/district-4.png" alt="" id="districts">
       </div>
     </div>
 
-    <div class="pure-u-1-5">
+    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="/images/district-4.png" alt="">
-      </div>
-    </div>
-
-    <div class="pure-u-1-5">
-      <div>
-        <img src="/images/district-5.png" alt="">
+        <img src="/images/district-5.png" alt="" id="districts">
       </div>
     </div>
 
