homepage splash tweaks on desktop

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -36,13 +36,19 @@
   }
 
   #myTitleText {
-    width: 70%;
+    width: 63%;
     display: inline-block;
+  }
+
+  .content-container {
+    max-width: 1445px;
+    display: block;
+    margin: 0 auto;
   }
 
   #educatorTrustTitle {
     text-align: left;
-    color: black !important;
+    color: #4a4a4a !important;
     margin-left: 5%;
     margin-top: 5%;
     font-size: 2.3em;
@@ -54,7 +60,10 @@
   }
 
   #ipadImg {
-    width: 95%;
+    position: relative;
+    top: -80px;
+    left: 60px;    
+    width: 340px;
   }
 
   .section-buffer {
@@ -116,12 +125,13 @@
   }
 
   #hero-button {
+    text-align: center;
     width: 150px;
     height: 50px;
     font-size: 0.8em;
     display: block;
     font-family: 'Proximanova Semibold';
-    background-color: red;
+    background-color: #FF4242;
     color: white;
     border-radius: 5px;
     padding: 10px;
@@ -243,7 +253,7 @@
 
     .splash-new .splash-container .title {
       text-align: center;
-      width: 90% !important;
+      width: 88% !important;
     }
 
     #myTitleText {
@@ -434,7 +444,7 @@
     }
     .splash-new .splash-container .title {
       text-align: left;
-      width: 90% !important;
+      width: 88%;
     }
   }
 
@@ -465,9 +475,9 @@
         </h1>
 
           <h4 id="sub-pitch">
-            ReadUp listens to students read and then our teachers score a full running record for you with fluency, accuracy, comprehension, miscue analysis, and a recording 
+            ReadUp listens to students read and then it scores a full running record for you with fluency, accuracy, comprehension, miscue analysis, and a recording 
            </h4>
-        <a href="/student_dashboard/#/story/demo" id="hero-button">> Try a Demo</a>
+        <a href="/student_dashboard/#/story/demo" id="hero-button">Try a Demo</a>
       </div>
 
       <div id="ipadImgContainer">
@@ -479,11 +489,10 @@
 
 
 
-
-<div class='section-buffer'></div>
-
-<h1 id="educatorTrustTitle"> Trusted by thousands of educators </h1>
-
+<div class="content-container"> 
+  <div class='section-buffer'></div>
+  <h1 id="educatorTrustTitle"> Trusted by thousands of educators </h1>
+</div>
 
 <section style="margin-bottom: 2em; width:80%;">
   <div class="pure-g block text-center" style="padding-top: 1em;">
