--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -95,41 +95,44 @@
 
   </body>
 
+  <div class="content-container">
+    <footer class="footer">
+      <div class="footer--container  container---full">
+        <nav class="footer--nav">
+          <a class="footer--nav--link footer--nav--link---terms-privacy" href="/privacy">
+            Terms &amp; Privacy </a>
+          <a class="footer--nav--link" href="mailto:team@readupnow.com" target="_blank">
+            Learn More
+          </a>
+          <a class="footer--nav--link" href="mailto:team@readupnow.com">
+            Email Us
+          </a>
+          <a class="footer--nav--link" href="/team">
+            Our Team
+          </a>
+          <a class="footer--nav--link" href="mailto:team@readupnow.com">
+            Request Demo
+          </a>
+          <a class="footer--nav--link" href="mailto:careers@readupnow.com">
+            Careers
+          </a>
+          <a class="footer--nav--link" href="/privacy">
+            Trust &amp; Safety
+          </a>
+          <a class="footer--nav--link" href="mailto:team@readupnow.com" target="_blank">
+            Support
+          </a>
+        </nav>
+      </div>
 
-  <footer class="footer">
-    <div class="footer--container  container---full">
-      <nav class="footer--nav">
-        <a class="footer--nav--link footer--nav--link---terms-privacy" href="/privacy">
-          Terms &amp; Privacy </a>
-        <a class="footer--nav--link" href="mailto:team@readupnow.com" target="_blank">
-          Learn More
-        </a>
-        <a class="footer--nav--link" href="mailto:team@readupnow.com">
-          Email Us
-        </a>
-        <a class="footer--nav--link" href="/team">
-          Our Team
-        </a>
-        <a class="footer--nav--link" href="mailto:team@readupnow.com">
-          Request Demo
-        </a>
-        <a class="footer--nav--link" href="mailto:careers@readupnow.com">
-          Careers
-        </a>
-        <a class="footer--nav--link" href="/privacy">
-          Trust &amp; Safety
-        </a>
-        <a class="footer--nav--link" href="mailto:team@readupnow.com" target="_blank">
-          Support
-        </a>
-      </nav>
-    </div>
+      <!-- smooth scroll init! -->
+      <script type="text/javascript">
+        var scroll = new SmoothScroll('a[href*="#"]');
+        console.log(scroll);
+      </script>
+      
+    </footer>
+  </div>
 
-    <!-- smooth scroll init! -->
-    <script type="text/javascript">
-      var scroll = new SmoothScroll('a[href*="#"]');
-      console.log(scroll);
-    </script>
-    
-  </footer>
+
 </html>
