desktop homepage working --> now animated button

--- a/app/assets/stylesheets/homepage/_navbar.scss
+++ b/app/assets/stylesheets/homepage/_navbar.scss
@@ -53,7 +53,7 @@
      }
 
      button#top-button {
-      background-color: #2C6D9C;
+      background-color: #FF4242;
       color: white;
      }
    }
