--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -26,12 +26,12 @@
     text-align: center;
   }
 
-  #districts {
-    width: 100%;
+  img#districts {
+    width: 65%;
   }
 
   .mainTitle {
-    width: 65%;
+    width: 64%;
     margin-right: 0px;
   }
 
@@ -101,7 +101,7 @@
 
   #get-started h1 {
     font-family: 'Proximanova Semibold';
-    font-size: 2.2em;
+    font-size: 2.1em;
     color: white;
   }
 
@@ -126,6 +126,17 @@
 
   #hero-button {
     text-align: center;
+    width: 200px;
+    height: 55px;
+    font-size: 1em;
+    display: block;
+    font-family: 'Proximanova Semibold';
+    background-color: #FF4242;
+    color: white;
+    border-radius: 5px;
+    padding: 12px;
+
+/*    text-align: center;
     width: 150px;
     height: 50px;
     font-size: 0.8em;
@@ -134,7 +145,7 @@
     background-color: #FF4242;
     color: white;
     border-radius: 5px;
-    padding: 10px;
+    padding: 10px;*/
   }
 
   .how-it-works {
@@ -232,6 +243,11 @@
     display: inline-block;
   }
 
+  .district-section { 
+    margin-bottom: 2em;
+    width:100%;
+
+  }
 
 
   /* mobile */
@@ -466,7 +482,7 @@
           center
           top/cover
           no-repeat
-          #726241;"
+          #416B83;"
   >
     <div class="title">
       <div id="myTitleText">
@@ -494,7 +510,7 @@
   <h1 id="educatorTrustTitle"> Trusted by thousands of educators </h1>
 </div>
 
-<section style="margin-bottom: 2em; width:80%;">
+<section class="district-section">
   <div class="pure-g block text-center" style="padding-top: 1em;">
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
