--- a/app/views/homepage/partials/_navbar.html.erb
+++ b/app/views/homepage/partials/_navbar.html.erb
@@ -97,18 +97,14 @@
 
     <div class="nav-buttons">
 
-      <a class="how" href="#end-no-reading" data-turbolinks="false">
-        How it works
-      </a>
 
-
-      <a href="#pitch" data-turbolinks="false">
+      <a href="/student_dashboard/#/story/demo" data-turbolinks="false">
         <button
           id="top-button"
           onclick="mixpanel.track('navbar signup button clicked', {'location': 'navbar'});"
           class="pure-button-primary pure-button signup-button"
         >
-          Get started
+          Try a Demo
         </button>
       </a>
     </div>
