--- a/app/views/homepage/components/_footer.erb
+++ b/app/views/homepage/components/_footer.erb
@@ -3,20 +3,17 @@
       <nav class="footer--nav">
         <a class="footer--nav--link footer--nav--link---terms-privacy" href="/privacy">
           Terms &amp; Privacy </a>
-        <a class="footer--nav--link" href="mailto:team@readupnow.com" target="_blank">
-          Learn More
+        <a class="footer--nav--link" href="/student_dashboard/#/story/demo">
+          Try Demo
         </a>
         <a class="footer--nav--link" href="mailto:team@readupnow.com">
           Email Us
         </a>
-        <a class="footer--nav--link" href="/team">
-          Our Team
-        </a>
         <a class="footer--nav--link" href="mailto:team@readupnow.com">
-          Request Demo
+          Request Info
         </a>
         <a class="footer--nav--link" href="mailto:careers@readupnow.com">
-          Careers
+          Jobs
         </a>
         <a class="footer--nav--link" href="/privacy">
           Trust &amp; Safety
