mobile seems to work

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -333,14 +333,14 @@
 
     #ipadImgContainer {
       display: block;
-      width: 60%;
+      width: 80%;
       margin: 0 auto;
       position: relative;
       top: 50px;
     }
 
     #ipadImg {
-      width: 95%;
+      width: 100%;
     }
 
     button#new-hero-button.primary-btn {
@@ -355,12 +355,18 @@
     }
 
     #educatorTrustTitle {
-      font-size: 1em;
+      font-size: 1.8em;
+      text-align: center;
       margin-top: 25%;
+      margin-left: 0px;
+    }
+
+    img#districts {
+      width: 95%;
     }
 
     .footer {
-      font-size: .2em !important;
+      font-size: .6em !important;
       text-align: center;
       padding-bottom: 0px !important;
       line-height: .3;
@@ -370,11 +376,11 @@
     }
 
     .splash-new .splash-container .title #myTitleText h4 {
-      font-size: .5em;
+      font-size: 1em;
     }
 
     .splash-new .splash-container .title #myTitleText h1 {
-      font-size: 1.5em;
+      font-size: 2.1em;
     }
 
 
@@ -453,6 +459,57 @@
     }
 
 
+
+    .splash-new .splash-container .title {
+      text-align: center;
+      width: 90% !important;
+
+    }
+
+    h4#sub-pitch {
+      width:  100%;
+    }
+
+    div.splash-container {
+        background: url('https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/hero/student-hero-blue-tablet.jpg')
+          center
+          top/cover
+          no-repeat
+          #726241 !important;
+
+    }
+
+    #myTitleText {
+      width: 90%;
+      display: block;
+      text-align: center;
+      margin: 0 auto;
+      min-width: 0px;
+/*      font-size: .8em
+*/    }
+
+    #ipadImgContainer {
+      display: block;
+      width: 80%;
+      margin: 0 auto;
+      position: relative;
+      top: 70px;
+      left: 30px;
+    }
+
+    #ipadImg {
+/*      width: 70%;
+*/      display: block;
+      position: initial;
+      margin: 0 auto;
+    }
+
+    button#new-hero-button.primary-btn {  
+      margin: 0 auto;
+    }
+
+
+
   }
 
 /*  @media (min-width: 800px) and (max-width: 1025px){
@@ -508,7 +565,6 @@
 */      display: block;
       position: initial;
       margin: 0 auto;
-      margin-left: -30px;
     }
 
     button#new-hero-button.primary-btn {  
