--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -29,7 +29,7 @@
   }
 
   img#districts {
-    width: 65%;
+    width: 58%;
   }
 
   .mainTitle {
@@ -313,7 +313,7 @@
           center
           top/cover
           no-repeat
-          #726241 !important;
+          #416B83 !important;
     }
 
     #get-started h1 {
@@ -341,6 +341,7 @@
 
     #ipadImg {
       width: 100%;
+      margin-left: -30px;
     }
 
     button#new-hero-button.primary-btn {
@@ -362,7 +363,7 @@
     }
 
     img#districts {
-      width: 95%;
+      width: 85%;
     }
 
     .footer {
@@ -475,7 +476,7 @@
           center
           top/cover
           no-repeat
-          #726241 !important;
+          #416B83 !important;
 
     }
 
@@ -502,6 +503,7 @@
 */      display: block;
       position: initial;
       margin: 0 auto;
+      margin-left: -30px;
     }
 
     button#new-hero-button.primary-btn {  
@@ -538,7 +540,7 @@
           center
           top/cover
           no-repeat
-          #726241 !important;
+          #416B83 !important;
 
     }
 
@@ -649,7 +651,7 @@
       </div>
 
       <div id="ipadImgContainer">
-        <img id="ipadImg" src="/images/ipad-product.png" alt="">
+        <img id="ipadImg" src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/ipad-compressed.png" alt="">
       </div>
     </div>
 </div>
@@ -667,29 +669,29 @@
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="/images/district-1.png" alt="" id="districts">
+        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-1.png" alt="" id="districts">
       </div>
     </div>
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
-        <img src="/images/district-2.png" alt="" id="districts">
+        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-2.png" alt="" id="districts">
     </div>
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="/images/district-3.png" alt="" id="districts">
-      </div>
-    </div>
-
-    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
-      <div>
-        <img src="/images/district-4.png" alt="" id="districts">
+        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-3.png" alt="" id="districts">
       </div>
     </div>
 
     <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
       <div>
-        <img src="/images/district-5.png" alt="" id="districts">
+        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-4.png" alt="" id="districts">
+      </div>
+    </div>
+
+    <div class="pure-u-1-3 pure-u-md-1-3 pure-u-lg-1-5">
+      <div>
+        <img src="https://s3-us-west-2.amazonaws.com/readup-now/website/homepage/districts/district-5.png" alt="" id="districts">
       </div>
     </div>
 
