--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -600,6 +600,14 @@
       text-align: center;
     }
 
+   img#districts {
+      width: 48%;
+    }
+
+
+
+    
+
   }
 
   @media (min-width: 35.5em) {
