progress toward video layout sanity

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -636,11 +636,11 @@
 perspective: 766px;
 */
 
-position: relative;
--webkit-perspective: 766px;
 perspective: 1300px;
+-webkit-perspective: 1300px;
 transform: rotate(4deg);
-    perspective-origin: 30% 90%;
+perspective-origin: 30% 90%;
+display: inline-block;
 
 }
 
@@ -663,19 +663,22 @@ transform: rotateX(2deg) rotateY(-25deg);*/
 
 
 .the-dang-device { 
-    left: 76%;
-    margin-left: -155px;
-    position: absolute;
+    left: 36%;
+    margin-left: 65px;
     z-index: 999;
+    display: inline-block;
+    margin-top: -60px;
 }
+
+
 
 video.ipad-device {
     height: 381px;
-    left: 76%;
-    margin-left: -156px;
+    margin-left: 65px;
     position: absolute;
-    top: 38px;
-}
+    top: -132px;
+    display: inline-block;
+
 }
 
 
@@ -736,7 +739,7 @@ video.ipad-device {
       </div>
     </div>
  -->
-    
+
 </div>
 </div>
 
