video working on desktop, now tablet/mobile

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -663,8 +663,9 @@ transform: rotateX(2deg) rotateY(-25deg);*/
 
 
 .the-dang-device { 
-    left: 36%;
-    margin-left: 65px;
+/*    left: 36%;
+*/  
+  margin-left: 40px;
     z-index: 999;
     display: inline-block;
     margin-top: -60px;
@@ -674,7 +675,7 @@ transform: rotateX(2deg) rotateY(-25deg);*/
 
 video.ipad-device {
     height: 381px;
-    margin-left: 65px;
+    margin-left: 40px;
     position: absolute;
     top: -132px;
     display: inline-block;
@@ -728,7 +729,7 @@ video.ipad-device {
   <img class="ipad-device the-dang-device" src="/images/ipad-bkg.png">
 
 
-  <video class="ipad-device" controls loop autoplay preload="1">
+  <video class="ipad-device" loop autoplay preload="1">
             <source src="/images/proto-anim-1-crop-small.mp4" type="video/ogg">
   </video>
 
