placeholder image working. now onto optimizing assets."

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -666,7 +666,8 @@ transform: rotateX(2deg) rotateY(-25deg);*/
 /*    left: 36%;
 */  
   margin-left: 40px;
-    z-index: 999;
+/*    z-index: 999;
+*/  
     display: inline-block;
     margin-top: -60px;
 }
@@ -837,7 +838,7 @@ video.ipad-device {
 
 <div class="perspective-container"> 
 
-  <img class="ipad-device the-dang-device" src="/images/ipad-bkg.png">
+  <img class="ipad-device the-dang-device" src="/images/ipad-full-writing.png">
 
 
   <video class="ipad-device" loop muted autoplay preload="1">
