ipad background container is optimized

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -838,7 +838,8 @@ video.ipad-device {
 
 <div class="perspective-container"> 
 
-  <img class="ipad-device the-dang-device" src="/images/ipad-full-writing.png">
+
+  <img class="ipad-device the-dang-device" src="/images/ipad-test-min.png">
 
 
   <video class="ipad-device" loop muted autoplay preload="1">
