--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -839,7 +839,7 @@ video.ipad-device {
 <div class="perspective-container"> 
 
 
-  <img class="ipad-device the-dang-device" src="/images/ipad-test-min.png">
+  <img class="ipad-device the-dang-device" src="/images/ipad-bkg-and-placeholder.png">
 
 
   <video class="ipad-device" loop muted autoplay preload="1">
