--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -843,7 +843,7 @@ video.ipad-device {
 
 
   <video class="ipad-device" loop muted autoplay preload="1">
-            <source src="/images/proto-anim-1-crop-smallest.mp4" type="video/ogg">
+            <source src="/images/v1.mp4" type="video/mp4">
   </video>
 
 </div>
