--- a/app/views/homepage/mobile_halt.erb
+++ b/app/views/homepage/mobile_halt.erb
@@ -36,5 +36,5 @@
 
 <div class="cta">
 	<h1 class="celebration">Great! 🙌🏽</h1>
-	<h2 class="mobile-cta">Now just sign in on a <span class="explanatory-text">desktop computer</span></h2>
+	<h2 class="mobile-cta">Now just get on a <span class="explanatory-text">desktop computer</span> to see ReadUp live</h2>
 </div>
