--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -675,12 +675,16 @@ transform: rotateX(2deg) rotateY(-25deg);*/
 
 
 video.ipad-device {
-    height: 381px;
+    height: 369px;
     margin-left: 40px;
     position: absolute;
     top: -132px;
     display: inline-block;
-
+    /* height: 478px; */
+    left: 50%;
+    margin-left: -135px;
+    position: absolute;
+    top: -124px;
 }
 
 #ipadImgContainer, #ipadImg {
@@ -707,15 +711,26 @@ video.ipad-device {
   }
 
   .the-dang-device, video.ipad-device {  
-    margin-left: 5px;
-  }
+/*    margin-left: 5px;
+*/  }
 
   .ipad-device {
     width: 300px;
   }
 
   video.ipad-device {
-    height: 363px;
+    height: 368px;
+    left: 50%;
+    margin-left: -135px;
+    position: absolute;
+    top: -125px;
+
+
+ /*   height: 363px;
+    left: 50%;
+    margin-left: -131px;
+    position: absolute;
+    top: -125px;    */
   }
 
 }
@@ -734,14 +749,25 @@ video.ipad-device {
   }
 
   video.ipad-device {
-    height: 381px;
-    /* margin-left: 40px; */
+/*    height: 381px;
     position: absolute;
     top: 28px;
     display: inline-block;
     display: block;
     margin: 100px auto;
-    margin-left: 30%;
+    margin-left: 30%;*/
+
+    height: 369px;
+    position: absolute;
+/*    top: -132px;
+*/    display: inline-block;
+    position: absolute;
+    top: 32px;
+    margin-left: 0px;
+
+
+    left:30%;
+
   }
 
   video.ipad-device, .the-dang-device, .ipad-device {
@@ -757,6 +783,19 @@ video.ipad-device {
   .the-dang-device, video.ipad-device {
     margin-left: 20%;
   }
+
+  video.ipad-device {
+        height: 369px;
+    position: absolute;
+/*    top: -132px;
+*/    display: inline-block;
+    position: absolute;
+    top: 32px;
+    margin-left: 0px;
+    left:20%;
+
+  }
+  
 }
 
 
