hotfix of the random ipad movement on homepage

--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -778,6 +778,19 @@ video.ipad-device {
 }
 
 
+@media (min-width: 1026px) and (max-width: 1055px) {
+
+  .ipad-device {
+      width: 275px;
+  }
+
+  video.ipad-device {
+    height: 331px;
+    margin-left: -120px;
+    top: -128px;
+  }
+}
+
 @media (min-width: 566px) and (max-width: 700px)
 {
   .the-dang-device, video.ipad-device {
