--- a/app/views/homepage/index.erb
+++ b/app/views/homepage/index.erb
@@ -854,8 +854,6 @@ video.ipad-device {
 
 
 <%= render 'homepage/partials/navbar' %>
-<%= render 'homepage/modals/signup_form_modal' %>
-
 
 
 <div class="splash-new">
@@ -950,7 +948,7 @@ video.ipad-device {
   </div>
 </section>
 
-<script type="text/javascript">
+<script async type="text/javascript">
 
 // isMobileDevice()
   $(".demo-button").click( function() { 
