--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -14,10 +14,15 @@
     <%= stylesheet_link_tag    'main', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 
-    <!-- Loads JS asynchronously only in production -->
-    <%= javascript_include_tag 'application', async: Rails.env.production? %>
+    <%= javascript_include_tag 'application', async: true %>
     <%= javascript_include_tag 'homepage/helpers', 'data-turbolinks-track': 'reload', async: false %>
-    <%= javascript_include_tag 'vendor/smooth-scroll', 'data-turbolinks-track': 'reload', async: Rails.env.production? %>
+    <%= javascript_include_tag 'vendor/smooth-scroll', 'data-turbolinks-track': 'reload', async: true %>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
