only include the necessary js. hide demo nav button on mobile

--- a/app/views/homepage/partials/_navbar.html.erb
+++ b/app/views/homepage/partials/_navbar.html.erb
@@ -126,5 +126,14 @@
   });
 
 
+  // Hotfix to not deal with the demo not working on mobile
+  $(document).ready(function(){
+        if (isMobileDevice()) {
+          $("#demo-nav-button").hide();
+        }
+  });
+  
+
+
 </script>
 
