--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -13,17 +13,12 @@
     <%= stylesheet_link_tag    'homepage/index', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag    'main', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'application', async: true%>
     <%= javascript_include_tag 'homepage/helpers', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'vendor/smooth-scroll', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'vendor/smooth-scroll', 'data-turbolinks-track': 'reload', async: true %>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!-- Load jQuery and  validtions plugin -->
-
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/additional-methods.js"></script>
-    <%= javascript_include_tag 'homepage/validations', 'data-turbolinks-track': 'reload' %>
 
     <!-- pure -->
     <!-- <link rel="stylesheet" href="/stylesheets/imports/pure-min.css"> -->
